# codex-session-renamer

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  frp-tunnel.sh  pyproject.toml  run.sh
docs/superpowers/plans/: 2026-07-11-public-github-release.md
docs/superpowers/specs/: 2026-07-10-github-release-hardening-design.md
session_renamer/: __init__.py  app.py  codex_app_server.py  qwen_title.py  store.py  title_suggester.py
static/: style.css
templates/: index.html  session.html
tests/: test_app.py  test_codex_app_server.py  test_qwen_title.py  test_scripts.py  test_store.py  test_title_suggester.py  test_version.py
