[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-session-renamer"
version = "0.7.1"
description = "A local web interface for reviewing, renaming, and managing Codex sessions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.9,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1"]

[tool.setuptools]
packages = ["session_renamer"]

[tool.setuptools.package-data]
session_renamer = []
